--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -8,7 +8,7 @@ ja:
         introduction: 説明
       comment:
         comment: コメント
-      cleaning_tools:
+      cleaning_tool:
         cleaning_tool_name: 掃除道具
-      cleaning_recipes:
+      cleaning_recipe:
         cleaning_recipe: 掃除方法
